# 30122-project-gitmoney

./: .gitignore  FINAL.md  README.md  hello.py  jakejsmith_ChicagoMenuMoney_2012_23.csv  pyproject.toml  requirements.txt  seline_wiki_scrape.ipynb  street_search.py
311/: 311_analysis.py  analysis.py  analysis_311.py  download_311.py  http_functions.py
311_data/: __main__.py  http.py
Scraper/: alders_2012_2023.csv  all_data.json  exported_data.csv  join_ward_jsons.ipynb  libbys_scraped_data.json  scraped_data.json  seline_wiki_scrape.ipynb  table_scraper.ipynb  wiki_scraper.py
data/: all_alderpeople_2018_23.csv  calls_menu_man.csv  calls_money  final_menu_money.csv  final_menu_money1.csv  final_menu_money_converted.csv  grouped_311  menu_money.csv  merge.py  new_menu_money.csv  streets.json
data_smells/: Cleaning_Recs.md  README.md  seline_review_data.ipynb
delete_when_finalized_scraper/: join_ward_jsons.ipynb  seline_wiki_scrape.ipynb  table_scraper.ipynb  table_scraper.py
geomoney/: convert_cost.py  data_visualization.py  data_visualization_altair.py  databased.py  menu_masher.py  street_search.py  test_geomoney.py
gitmoney/: __init__.py  __main__.py  run_and_visualize.py
milestones/: milestone1.md  milestone1_5.md  milestone2.md  milestone3.md
presentation/: presentation.html
processing/: join_data.py  process_311_and_menu_money.py  wiki_scraper.py
scrap/: geojson_preprocessing.py  gitmoney_database.db
tests/: test_311_menu_money_clean_merge.py  test_geomoney.py  test_join_alder_311.py  test_wiki_scraper.py
visualizations/: chart.py  colors.py  (+5 more)
(+45 files in other folders)
