[project]
name = "30122-project-gitmoney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "anyio>=4.8.0",
    "certifi>=2024.12.14",
    "cssselect>=1.2.0",
    "dash>=2.18.2",
    "deck>=3.0.0",
    "geopandas>=1.0.1",
    "geopolars>=0.1.0a4",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.0.0",
    "ipdb>=0.13.13",
    "jedi>=0.19.2",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "nbformat>=4.2.0",
    "numpy>=2.2.3",
    "packaging>=24.2",
    "panda>=0.3.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pluggy>=1.5.0",
    "pydeck>=0.9.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "shapely>=2.0.7",
    "skimpy>=0.0.18",
    "typing-extensions>=4.12.2",
    "vegafusion>=2.0.2",
    "wcwidth>=0.2.13",
    "webbrowser",
]
